# commander

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml  run  runner  setup.cfg  setup.py
commander/: __init__.py  action.py  commander_run.py  i_action.py  i_topic.py  logger.py  run.py  runner.py  scripts.py  utils.py
commander/topics/other/: startproject.py
commander/topics/other/assets/empty_project/: README.md  action_runner.py  bash_completion  runner.py
commander/topics/other/assets/empty_project/topics/other/: hello_world.py
commander/topics/other/assets/startproject/empty_project/: .gitignore  bash_completion  run_action.py
commander/topics/other/assets/startproject/empty_project/topics/other/: hello_world.py
commander/utils/: standard_directory.py  topic_and_action.py
requirements/: base.in  dev.txt
requirements/compiled/: dev.txt
requirements/raw/: dev.in
scripts/python_checker/: main.py
