[metadata]
name = commander
version = 1.0.0
author = Ehsan Ahmadi
author_email = 1374ea@example.com
description = A framework for creating commands
long_description = file: README.md
long_description_content_type = text/markdown
url = https://mgit.mparsict.com/ahmadiehsan/commander

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
install_requires =
    argcomplete>=1.12.3,<2.0.0

[options.entry_points]
console_scripts =
    commander-admin = commander.runner:commander_admin
